Fix issue with margin when hover, align checkbox better

--- a/less/forum/NotificationList.less
+++ b/less/forum/NotificationList.less
@@ -106,8 +106,10 @@
   .Notification-action {
     float: right;
     display: none;
-    margin-top: -11px;
-    margin-right: -11px;
+    margin-top: -7px;
+    margin-right: -10px;
+    line-height: inherit;
+    padding: 5px 0;
 
     & when (@config-colored-header = true) {
       .Button--color(@control-color, @control-bg);
